# innomapcad

./: .gitignore  .mcp.json  AGENTS.md  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  presentation.html  skills-lock.json
.github/workflows/: release.yml
backend/: Dockerfile  pyproject.toml  pyrightconfig.json
backend/data/: cadastral.geojson  protection_zones.geojson
backend/scripts/: rotate_geojson.py  tune_rotation.py
backend/src/: main.py  models.py
backend/src/routers/: health.py  layers.py  presets.py  validate.py
backend/src/services/: data_store.py  validator.py
backend/tests/: conftest.py  test_health.py  test_layers.py  test_presets.py  test_validate.py
docs/: 0.PRD.md  1.INFO.DATA_ACQUISITION.md  1.INFO.DATA_SOURCES.md  2.PLAN.PT1.md  2.PLAN.PT2.md  2.PLAN.TESTING_STRATEGY.md  3D_BUILDINGS_INTEGRATION.md  ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STAGES.md  INITIAL_IDEA.md  PHILOSOPHY.md  PRD.md  TESTING_STRATEGY.md
extension/: .prettierrc  eslint.config.ts  manifest.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
extension/src/: content.tsx
ralph/: RALPH.md  README.md  ralph.sh  yq.sh
ralph/current/: .last-branch  RALPH.md  prd.yaml  progress.txt
scripts/: chrome-devtools-mcp-with-extension.sh  generate_mock_data.py  launch-chrome-with-extension.sh  manual-launch-chrome-with-extension.sh  test-mcp-extension.sh
test-extension/: content.js  manifest.json  package.json
test-extension-playwright/: package-lock.json  package.json  playwright.config.ts
(+52 files in other folders)
