[project]
name = "innomapcad-backend"
version = "0.1.0"
description = "InnoMapCAD backend — FastAPI service for interactive CAD map editing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "httpx>=0.27.0",
    "msgspec>=0.19.0",
    "rusty-results>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "basedpyright>=1.22.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportAny = "error"
reportImplicitStringConcatenation = "none"
reportUnusedCallResult = "none"
reportUnnecessaryIsInstance = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
